fixed and made minor changes to the product cards and layout issues

--- a/layout.css
+++ b/layout.css
@@ -635,11 +635,13 @@ body {
 
  .icon-btn,
  .heart-btn {
-    background: white;
+    background: black;
     border: none;
     padding: 8px;
     border-radius: 6px;
     cursor: pointer;
+    width: 40px;
+    height: 40px;
     box-shadow: 0 2px 6px;
  }
 
@@ -647,7 +649,7 @@ body {
 .heart-btn svg {
     width: 22px;
     height: 22px;
-    stroke: black;
+    stroke: white;
     fill: none;
  }
 
@@ -685,7 +687,7 @@ body {
 
 }
 
-.prodcut-details h3 {
+.product-details h3 {
     font-size: 16px;
     font-weight: bold;
     margin-bottom: 8px;
@@ -934,4 +936,22 @@ main {
     .product-grid{
         grid-template-columns: repeat(1fr);
     }
+}
+
+.product-icons{
+    position: absolute;
+    top: 20px;
+    right: 16px;
+    display: flex;
+    gap: 8px;
+    z-index: 2;
+}
+
+.product-link {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
 }
